--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -38,7 +38,7 @@ Given a user-selected target coordinate in reciprocal crystal space,
 the algorithm is able to navigate the instrument in its constrained angular space.
 To that end, a generalised Voronoi diagram is used to calculate a mesh of possible paths
 the instrument can move along. The specific path to be used can be parametrised given
-user-defined constraints like the shortest path or the greatest distance to walls.
+user-defined modifiers like the shortest path or the greatest distance to walls.
 The situation is similar to moving a robot arm around obstacles, with the addition of having
 the start and target coordinates in a coordinate system with a different metric.
 An easy to use graphical user interface is provided for visualising the motion planning
