--- a/tex/foreword.tex
+++ b/tex/foreword.tex
@@ -10,7 +10,7 @@
 The present work is concerned about the development of a pathfinding system for neutron triple-axis
 spectrometers using the concepts of robot motion planning.
 It touches upon multiple disciplines in physics and computer science. Among these are the field
-of neutron scattering, concept of solid-state physics and crystallography for the physical part,
+of neutron scattering, concepts of solid-state physics and crystallography for the physical part,
 as well as Voronoi diagrams, graph theory and spatial index trees for robot motion 
 planning, furthermore three-dimensional graphics and unit testing.
 This work is organised in a manner to introduce important concepts with dedicated chapters that are
