--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -79,7 +79,7 @@ G. L. Squires \cite{Squires2012}.
 
 A two-axis diffractometer is used for determining the static structure of crystals \cite[pp. 89f]{Gross2012},
 which are here typically provided in powder form, but can also be single-crystals.
-It is the single most fundamental kind of machines in the field of
+It is the single most fundamental kind of machine in the field of
 neutron scattering at research reactors. This instrument type consists of a single-crystal (meaning it comprises one
 single grain), which is called ``monochromator'' and named after its function to pick out one specific wavelength,
 $\lambda_i$, from the polychromatic neutron beam coming from the reactor core or from one of its moderators.
@@ -218,7 +218,7 @@ gained significant traction, with first autonomous experiments being attempted a
 \cite{web_ill_autonomous2020, Noack2021}.
 
 As part of the current drive towards autonomous experimentation at the ILL, the goal of the present work is the design
-and implementation of a software tool which enable an automatic pathfinding for TAS instruments. Pathfinding
+and implementation of a software tool which enables an automatic pathfinding for TAS instruments. Pathfinding
 is necessary for the instrument to circumvent obstacles in its way and for safe, collision-free movement close to walls.
 Currently, this task has to be performed by the instrument scientists before each new scan series in a time-consuming fashion.
 The current approach requires the instrument to be driven along the programmed scan path, but without measuring and with
