--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -723,6 +723,21 @@
 }
 
 
+@article
+{
+	Arnold2014,
+	author = {O. Arnold and J.C. Bilheux and J.M. Borreguero and A. Buts and S.I. Campbell and L. Chapon and M. Doucet and N. Draper and R. {Ferraz Leal} and M.A. Gigg and V.E. Lynch and A. Markvardsen and D.J. Mikkelson and R.L. Mikkelson and R. Miller and K. Palmen and P. Parker and G. Passos and T.G. Perring and P.F. Peterson and S. Ren and M.A. Reuter and A.T. Savici and J.W. Taylor and R.J. Taylor and R. Tolchenov and W. Zhou and J. Zikovsky},
+	title = {{Mantid -- Data analysis and visualization package for neutron scattering and $\mathrm{\mu}$ SR experiments}},
+	journal = {{Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment}},
+	year = {2014},
+	volume = {764},
+	pages = {156-166},
+	doi = {10.1016/j.nima.2014.07.029},
+	issn = {0168-9002},
+	github = {https://github.com/mantidproject},
+}
+
+
 @inproceedings
 {
 	Icking1995,
