--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -93,6 +93,8 @@ having to search the correct version.
 Apart from using the \textit{tlibs} library, several code snippets are further developments
 of their counterparts from that library, among these the setup and build scripts for the various
 systems, as well as the \textit{OpenGL} renderer and general-purpose code.
+The \textit{OpenGL} renderer was furthermore based on example source code \cite{web_QOpenGLWidgetExampleThreaded} provided
+with the \textit{Qt} \cite{web_Qt} library.
 
 
 \paragraph{Thesis source code}
