--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1497,12 +1497,23 @@
 @misc
 {
 	web_boost_polygon_voronoi,
-	title = {{Voronoi extensions, part of the Boost.Polygon C++ library \cite{web_boost_polygon} (Software)}},
+	title = {{Boost.Polygon Voronoi extensions, part of the Boost.Polygon C++ library \cite{web_boost_polygon} (Software)}},
 	author = {Andrii Sydorchuk},
 	year = {2010-2013},
 	url = "https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/voronoi_main.htm",
 	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/voronoi_main.htm}",
 	note = "[Online; accessed 5-July-2021]",
+}
+
+
+@misc
+{
+	web_boost_polygon_voronoi_visual_utils,
+	title = {{Voronoi visual utils, part of the Boost.Polygon C++ library \cite{web_boost_polygon} (Software)}},
+	author = {Andrii Sydorchuk},
+	year = {2010-2012},
+	url = "https://github.com/boostorg/polygon/blob/develop/example/voronoi_visual_utils.hpp",
+	note = "[Online; accessed 3-October-2021]",
 }
 
 
@@ -1626,6 +1637,17 @@
 	url = "https://doc.qt.io/qt-5/qopenglwidget.html",
 	OPThowpublished = "\url{https://doc.qt.io/qt-5/qopenglwidget.html}",
 	note = "[Online; accessed 31-July-2021]",
+}
+
+
+@misc
+{
+	web_QOpenGLWidgetExampleThreaded,
+	title = {{Example code for multi-threaded QtOpenGLWidget, part of the Qt library \cite{web_Qt} (Software)}},
+	author = {{The Qt Company}},
+	year = {2014-2021},
+	url = "https://code.qt.io/cgit/qt/qtbase.git/tree/examples/opengl/threadedqopenglwidget",
+	note = "[Online; accessed 3-October-2021]",
 }
 
 
