--- a/tex/notation.tex
+++ b/tex/notation.tex
@@ -52,7 +52,7 @@ Table \ref{tab:notation} gives details on this notation.
 	\label{tab:notation}
 \end{table}
 
-
+\newpage
 \section{Abbreviations}
 Table \ref{tab:abbreviations} lists abbreviations that are used in this work.
 
