--- a/tex/publications.tex
+++ b/tex/publications.tex
@@ -86,7 +86,7 @@ We reproduce the current version as of September 2021 in the following.
 		M. Zhernenkov, H.-Y. N. Holman, S. Lee, L. Chen, E. Rotenberg, T. Weber, 
 		Y. Le Goc, M. B\"ohm, P. Steffens, P. Mutti, and J. A. Sethian, 
 	\textit{Gaussian processes for autonomous data acquisition at large-scale synchrotron and neutron facilities},
-	Nature Review Physics (28 July 2021),
+	Nature Review Physics, Volume 3, Pages 685-697 (28 July 2021),
 	DOI: \href{https://doi.org/10.1038/s42254-021-00345-y}{10.1038/s42254-021-00345-y}.
 
 	\item Y. Nambu, J. Barker, Y. Okino, T. Kikkawa, Y. Shiomi, M. Enderle, T. Weber, B. Winn, M. Graves-Brook, J. M. Tranquada, T. Ziman, M. Fujita, G. E. W. Bauer, E. Saitoh, and K. Kakurai, 
